--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello i am mohamad</h1>
+    <h1>hello i am mohammad mashhadi</h1>
 </body>
 </html>
